--- a/social-media/package.json
+++ b/social-media/package.json
@@ -18,11 +18,14 @@
         "@mui/icons-material": "^7.0.2",
         "@mui/material": "^7.0.2",
         "@tanstack/react-query": "^5.74.9",
+        "axios": "^1.9.0",
+        "immer": "^10.1.1",
         "path": "^0.12.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.56.3",
         "react-router": "^7.5.3",
+        "react-toastify": "^11.0.5",
         "yup": "^1.6.1",
         "zustand": "^5.0.3"
     },
